--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* Styling the buttons*/
 #start_button{
     background: #32557f;
     color: gold;
@@ -6,7 +6,6 @@
     height: 100px;
     border-radius: 30%;     
 }
-
 #restart_button{
     background: #32557f;
     color: gold;
@@ -14,7 +13,6 @@
     height: 100px;
     border-radius: 30%;  
 }
-
 #continue_button{
     background: #32557f;
     color: gold;
@@ -27,8 +25,7 @@
     width:200px;
     margin-top:0;
 }
-
-
+/* Styling the content views*/
 #game_title{
     
     margin: 0 auto;
@@ -36,7 +33,6 @@
     align-items: center;
     text-align: center;
 }
-
 #start_game{
     display: flex;
     flex-direction: column;
@@ -48,7 +44,6 @@
     width: 400px;
     margin: 0 auto;
 }
-
 #play_game{
     display: flex;
     flex-direction:column;
@@ -61,7 +56,6 @@
     text-align: left;
     align-items: center;
 }
-
 #continue_game{
     display:flex;
     flex-direction: column;
@@ -74,7 +68,6 @@
     text-align: center;
     align-items: center;
 }
-
 #end_game{
     display:flex;
     flex-direction: column;
@@ -87,13 +80,12 @@
     text-align: center;
     align-items: center;
 }
-
+/* Styling the contents*/
 #container{
     display: flex;
     flex-direction:column;
     flex-basis: 500px;
     max-width: 600px;
-    /* height: 400px; */
     margin: 0 auto;
  }
  .items.item{
@@ -106,9 +98,7 @@
  }
  #user_input{
      width:99%;
-     /* height:40px; */
  }
-
  .question{
     margin-bottom: 15px;
  }
